K8s/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  labels:
    app: cart
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
