K8s/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  labels:
    app: catalog
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
