K8s/checkout-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-service
  labels:
    app: checkout
spec:
  type: ClusterIP
  selector:
    app: checkout
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
