K8s/orders-serive.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  labels:
    app: orders
spec:
  type: ClusterIP
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
