K8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui
spec:
  type: LoadBalancer  
  selector:
    app: ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
